--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   },
   "homepage": "https://github.com/alura-cursos/1922-graphql#readme",
   "dependencies": {
+    "apollo-datasource": "^3.3.1",
     "apollo-datasource-rest": "^3.5.2",
     "apollo-server": "^3.6.7",
+    "datasource-sql": "^2.0.1",
     "graphql": "^16.3.0",
+    "graphql-tools": "^6.2.4",
     "json-server": "^0.16.1",
-    "nodemon": "^2.0.4"
+    "knex": "^2.0.0",
+    "nodemon": "^2.0.4",
+    "sqlite3": "^5.0.5"
   }
 }
