--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-datasource": "^3.3.1",
     "apollo-datasource-rest": "^3.5.2",
     "apollo-server": "^3.6.7",
+    "dataloader": "^2.1.0",
     "datasource-sql": "^2.0.1",
     "graphql": "^16.3.0",
     "graphql-tools": "^6.2.4",
